Changed style 2 nav bar layout to flex to prevent stacking when window is resized. Changed background image in style 3 to coded gradient. Changed text spacing of header in style 2.

--- a/style2.css
+++ b/style2.css
@@ -28,6 +28,13 @@ body {
     padding-left: 10px;
 }
 
+.header h1 { 
+    letter-spacing: 5px;
+}
+
+.header h2 { 
+    letter-spacing: 5px;
+}
 .nav h3 { 
     float: left; 
     padding-top: 10px; 
@@ -39,10 +46,13 @@ body {
     text-align: left;
     margin: 0;
     padding: 0;
+    display: flex; 
+    width: 100%; 
 }
 
 .nav ul {
     padding-left: 0; 
+    display: flex; 
 }
 
 .nav h3 { 
@@ -54,6 +64,7 @@ body {
     display: inline-block;
     font-size: 20px;
     padding: 0 140px 0 10px; 
+    flex-wrap: nowrap;
 }
 
 .nav button { 
