--- a/style3.css
+++ b/style3.css
@@ -7,8 +7,8 @@
 }
 
 body  {
-    background-image: url("https://w.wallhaven.cc/full/6q/wallhaven-6q3grq.jpg");
     background-color: #cccccc;
+    background-image: linear-gradient(to bottom right, #FFFFC1, #FFD2A5, #6E7582, #09015F);
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
